--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    <title>My project</title>
+</head>
 </head>
 <body>
-    <h1>Mate academy</h1>
-    <ul>
-        <li>red</li>
-        <li>green</li>
-        <li>blue</li>
-    </ul>
 </body>
 </html>
